# Lyco

./: .bandit  .gitignore  .gitlab-ci.yml  .pylintrc  .safety-policy.yml  .semgrep.yml  AGENT.md  CONTEXT.md  DOCS.md  LICENSE  Lyco.py  Makefile  PENDING-COMMIT.txt  README.md  TASKS.md  TODO.md  TOOLING.md  docker-compose.yml  layout.yml  pyproject.toml  requirements-dev.txt  requirements-semgrep.txt  requirements.txt
.github/workflows/: ci.yml
docs/: README.md  ai-assistance-customization.md  ai-assistance.md  boilerplate.md  extension.md  tools-and-scripts.md  usage.md
prompts/: 01_check_comments.md  02_check_pylint.md  03_check_vulnerabilities.md  04_check_sbom.md  05_check_tests.md  06_run_tests.md  07_validate_tests.md  08_update_versions.md  09_update_package_info.md  10_update_project_state.md  11_update_dev_tooling.md  12_check_secrets.md  13_integration_audit.md  CI_CD_TASKS.md  POST_CI_CD_TASKS.md
scripts/: wsl_install_docker.sh  wsl_run_compose.sh
tests/: README.md  __init__.py  test_ci_local.py  test_cli.py  test_docs.py  test_e2e.py  test_launcher.py  test_makefile.py  test_suite_core.py  test_suite_full.py
tools/: build_binary.py  check_audit.py  check_pylint.py  check_secrets.py  check_vulnerabilities.py  ci_guard.py  ci_record.py  clean_artifacts.py  docker_probe.py  generate_sbom.py  post_ci_cd_report.py  run_ci_docker.py  run_ci_wsl.py  run_security_docker.py  run_security_wsl.py  run_semgrep_docker.ps1  run_semgrep_wsl.ps1  run_task.py  run_wsl_docker.py  sbom_inspect.py  security_checks.py  setup_env.py  should_run_sbom.py  ui_testing.md  wsl_probe.py  wsl_utils.py
(+9 files in other folders)
